fix modal z-index

--- a/UI/assets/scss/modules/_modals.scss
+++ b/UI/assets/scss/modules/_modals.scss
@@ -8,7 +8,7 @@
   display: none;
   top: 0;
   left: 0;
-  z-index: 12;
+  z-index: 14;
 
   &:before{
     content: ""; 
